--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/tamble/jquery-ui-daterangepicker#readme",
   "dependencies": {
     "jquery": "~1.8.3",
-    "jquery-ui": "~1.9.0",
+    "jquery-ui": "1.10.5",
     "moment": "~2.3.0"
   }
 }
